--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,3 +4,9 @@ RunningInformationAnalysisService:
     - "3306:3306"
   environment:
     -   MYSQL_ROOT_PASSWORD=root
+ 
+rabbitmq:
+  image: "rabbitmq:3-management"   
+  ports:
+    - "15672:15672"
+    - "5672:5672"
